--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
                         <img src="images/Bishop_HeadshotV1.2.jpeg" alt="Matt Bishop Profile Picture">
                     </figure>
                     <figcaption>
-                        <p>image by&nbsp;<a target="_blank" href="https://www.instagram.com/enthusedlife/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==">Drew Hastings</a></p>
+                        <p>image by&nbsp;<a target="_blank" href="">Drew Hastings</a></p>
+                        <!-- https://www.instagram.com/enthusedlife/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA== -->
 
-                        <p>After taking two web design and development classes at Colorado State University, Matt put his skills to use and became a freelance web-developer. Beyond basic HTML & CSS, Matt has experience with WordPress, SEO, and Responsive Design. Check out his&nbsp;<a href="https://www.fiverr.com/legitimatte/design-and-develop-a-website-for-you">Fiverr</a> for inquiries.</p>
+                        <p>After taking two web design and development classes at Colorado State University, Matt put his skills to use and became a freelance web-developer. Beyond basic HTML & CSS, Matt has experience with WordPress, SEO, and Responsive Design. Check out his&nbsp;<a href="">Fiverr</a> for inquiries.</p>
+                        <!-- https://www.fiverr.com/legitimatte/design-and-develop-a-website-for-you -->
                     </figcaption>
                 </div>
             </section>
@@ -51,11 +53,11 @@
             <ul>
                 <li><a href="https://www.themergeproject.org">themergeproject.org</a></li>
                 <li><a href="">rewindedness.com</a></li>
-                <li><a href="">cssupgrade.com</a></li>
+                <li><a href="https://legitimatte.github.io/lab/">cssupgrade.com</a></li>
                 <li><a href="">laceythomas.com</a></li>
                 <li><a href="">phantalsm.com</a></li>
-                <li><a href="">mattbishopdance.com</a></li>
-                <li><a href="">example.com</a></li>
+                <li><a href="https://legitimatte.github.io/mattbishopdance/">mattbishopdance.com</a></li>
+                <li><a href="https://legitimatte.github.io/dancersguide/">dancersguide.com</a></li>
                 <li><a href="">legitimatte.com</a></li>
             </ul>
         </div>
@@ -78,11 +80,11 @@
             <ul>
                 <li><a href="https://www.themergeproject.org">themergeproject.org</a></li>
                 <li><a href="">rewindedness.com</a></li>
-                <li><a href="">cssupgrade.com</a></li>
+                <li><a href="https://legitimatte.github.io/lab/">cssupgrade.com</a></li>
                 <li><a href="">laceythomas.com</a></li>
                 <li><a href="">phantalsm.com</a></li>
-                <li><a href="">mattbishopdance.com</a></li>
-                <li><a href="">example.com</a></li>
+                <li><a href="https://legitimatte.github.io/mattbishopdance/">mattbishopdance.com</a></li>
+                <li><a href="https://legitimatte.github.io/dancersguide/">dancersguide.com</a></li>
                 <li><a href="">legitimatte.com</a></li>
             </ul>
         </div>
