--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <section id="about">
                 <div id="headshot">
                     <figure>
-                        <img src="images/Bishop_HeadshotV1.2.jpeg" alt="Matt Bishop Profile Picture">
+                        <img src="images/MattBishop_Headshot.jpg" alt="Matt Bishop Profile Picture">
                     </figure>
                     <figcaption>
-                        <p>image by&nbsp;<a target="_blank" href="">Drew Hastings</a></p>
+                        <p>image by&nbsp;<a target="_blank" href="">Faith Elizabeth Hale</a></p>
                         <!-- https://www.instagram.com/enthusedlife/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA== -->
 
                         <p>After taking two web design and development classes at Colorado State University, Matt put his skills to use and became a freelance web-developer. Beyond basic HTML & CSS, Matt has experience with WordPress, SEO, and Responsive Design. Check out his&nbsp;<a href="">Fiverr</a> for inquiries.</p>
