New Photo Creds Link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <img src="images/MattBishop_Headshot.jpg" alt="Matt Bishop Profile Picture">
                     </figure>
                     <figcaption>
-                        <p>image by&nbsp;<a target="_blank" href="">Faith Elizabeth Hale</a></p>
+                        <p>image by&nbsp;<a target="_blank" href="https://www.instagram.com/faithehalephoto/">Faith Elizabeth Hale</a></p>
                         <!-- https://www.instagram.com/enthusedlife/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA== -->
 
                         <p>After taking two web design and development classes at Colorado State University, Matt put his skills to use and became a freelance web-developer. Beyond basic HTML & CSS, Matt has experience with WordPress, SEO, and Responsive Design. Check out his&nbsp;<a href="">Fiverr</a> for inquiries.</p>
